발표 문제 선택(애지)

--- a/plan/_posts/2021-07-18-plan .md
+++ b/plan/_posts/2021-07-18-plan .md
@@ -7,40 +7,30 @@ title: 2021년 7월 4주차
 
 [1. Sprint Plan](#Sprint-Plan)
 
-
-
 # Sprint Plan
 
-- 월_ [실패율](https://programmers.co.kr/learn/courses/30/lessons/42889)
-- 화_ [카드 정렬하기](https://www.acmicpc.net/problem/1715)
-- 수_ [공유기 설치](https://www.acmicpc.net/problem/2110)
-- 목_ [가사 검색](https://programmers.co.kr/learn/courses/30/lessons/60060)
-- 금_ [정수 삼각형](https://www.acmicpc.net/problem/1932)
-- 토_ [퇴사](https://www.acmicpc.net/problem/14501)
-
-
+- 월\_ [실패율](https://programmers.co.kr/learn/courses/30/lessons/42889)
+- 화\_ [카드 정렬하기](https://www.acmicpc.net/problem/1715)
+- 수\_ [공유기 설치](https://www.acmicpc.net/problem/2110)
+- 목\_ [가사 검색](https://programmers.co.kr/learn/courses/30/lessons/60060)
+- 금\_ [정수 삼각형](https://www.acmicpc.net/problem/1932)
+- 토\_ [퇴사](https://www.acmicpc.net/problem/14501)
 
 # _발표문제 선택 (발표시간 5분 내외)_
 
-- 진영 => 
-- 애지 =>
+- 진영 =>
+- 애지 => 정수 삼각형 - 2
 - 은기 => 카드 정렬하기 - 1
-- 유진 => 
-
-
+- 유진 =>
 
 # 회의내용
 
 - 하루에 1문제씩 풀기
 - 일주일에 1번 미팅 토,일 중 1일
 
-
-
 # 제안
 
 - _자유롭게 추가해주세요~_
-
-
 
 ### 벌금 쌓기
 
