docs: Update jinyoung presentation plan
진영의 발표문제를 포스팅합니다.

--- a/plan/_posts/2021-07-18-plan .md
+++ b/plan/_posts/2021-07-18-plan .md
@@ -18,7 +18,7 @@ title: 2021년 7월 4주차
 
 # _발표문제 선택 (발표시간 5분 내외)_
 
-- 진영 =>
+- 진영 => 퇴사 - 4
 - 애지 => 정수 삼각형 - 2
 - 은기 => 카드 정렬하기 - 1
 - 유진 => 가사 검색 - 3
@@ -26,6 +26,7 @@ title: 2021년 7월 4주차
 # 회의내용
 
 - 하루에 1문제씩 풀기
+  - 진영 - 쉽지 않네요ㅋㅋㅋㅋ
 - 일주일에 1번 미팅 토,일 중 1일
 
 # 제안
@@ -34,5 +35,5 @@ title: 2021년 7월 4주차
 
 ### 벌금 쌓기
 
-- 애지: 3000원 (누적)
-- 은기: 3000원 (누적)
+- 애지: 6000원 (누적)
+- 은기: 10000원 (누적)
