발표 문제 선택(애지)

--- a/plan/_posts/2021-07-25-plan .md
+++ b/plan/_posts/2021-07-25-plan .md
@@ -18,10 +18,10 @@ title: 2021년 7월 5주차
 
 # _발표문제 선택 (발표시간 5분 내외)_
 
-- 진영 => 
-- 애지 => 
-- 은기 => 
-- 유진 => 
+- 진영 =>
+- 애지 => 플로이드 - 1
+- 은기 =>
+- 유진 =>
 
 # 회의내용
 
